update dnsjava