@@ -679,7 +679,6 @@
                             --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                             --add-opens java.base/sun.util.calendar=ALL-UNNAMED
                             --add-opens java.base/sun.util.locale=ALL-UNNAMED
-                            --add-opens java.base/sun.net.dns=ALL-UNNAMED
                         </argLine>
 
                         <trimStackTrace>false</trimStackTrace>
@@ -857,7 +856,7 @@
                             --add-opens java.base/sun.nio.cs=ALL-UNNAMED
                             --add-opens java.base/sun.util.calendar=ALL-UNNAMED
                             --add-opens java.base/sun.util.locale=ALL-UNNAMED
-                            --add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
+                        </argLine>
 
                         <systemPropertyVariables/>
                         <trimStackTrace>true</trimStackTrace>
